--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "next": "15.2.2",
     "qr-image": "^3.2.0",
     "react": "^19.0.0",
