--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
-    "next": "15.2.2",
+    "next": "^15.3.2",
     "qr-image": "^3.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
