--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@next/font": "^14.2.15",
     "next": "^15.3.2",
+    "qr-code-styling-node": "^1.5.0",
     "qr-image": "^3.2.0",
+    "qrcode-svg": "^1.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sharp": "^0.34.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
